@@ -8,7 +8,9 @@ Post-v2.10.0
      as the default timeout for control utilities.
    - ovn:
      * ovn-ctl: allow passing user:group ids to the OVN daemons.
-
+   - DPDK:
+     * Add option for simple round-robin based Rxq to PMD assignment.
+       It can be set with pmd-rxq-assign.
 
 v2.10.0 - xx xxx xxxx
 ---------------------
